maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:34: error: not found: type dir
def isDirectionFree(direction:dir){
                              ^PledgeMaze:36: error: not found: value dir
  while(getDirection!=dir){
                      ^PledgeMaze:45: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^PledgeMaze:45: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return false
    ^PledgeMaze:52: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^PledgeMaze:52: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return true
    ^